--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p class="header__city">Новосибирск</p>
                     <h1 class="header__title">Питомник Мейн-Кунов</h1>
                     <p class="header__lead">Первый питомник с расширенным
-                        спектором услуг</p>
+                        спектром услуг</p>
                 <a href="#" class="header__btn">Смотреть котиков</a>
             </div>
         </div>
@@ -38,7 +38,7 @@
     <section class="pets section">
         <div class="section__wrapper pets__wrapper container">
             <h2 class="section__title pets__title">Питомцы</h2>
-            <p class="section__lead pets__lead">Все представтели нашего питомника имеют ветеринарный паспорт
+            <p class="section__lead pets__lead">Все представители нашего питомника имеют ветеринарный паспорт
                 с отметками о прививках и документ с родословной</p>
             <ul class="pets__list">
                 <li class="pets__item">
@@ -68,23 +68,31 @@
                     </div>
                 </div>
             </div>
-            <button class="button">Смотреть больше</button>
+            <button class="slider__button slider__button--prev" type="button">
+                <span class="visually-hidden">Предыдущий слайд</span>
+            </button>
+            <button class="slider__button slider__button--next" type="button">
+                <span class="visually-hidden">Следующий слайд</span>
+            </button>
+            <div class="pets__btn-wrapper">
+                <a href="#" class="pets__btn">Смотреть больше</a>
+            </div>
         </div>
     </section>
     <section class="breed-features section">
         <div class="container">
             <div class="section__wrapper breed-features__wrapper">
                 <h2 class="section__title breed-features__title">Особенности породы</h2>
-                <p class="section__lead breed-features__lead">Мейн-кун - это порода, которая вызывает к себе уважение. Приобретая в свой дом этого питомца,
+                <p class="section__lead breed-features__lead">Мейн-Кун - это порода, которая вызывает к себе уважение. Приобретая в свой дом этого питомца,
                     вы получите умное животное, которому нет равных</p>
                 <div class="breed-features__image">
 
                 </div>
                 <ul class="breed-features__list">
-                    <li class="breed-features__item breed-features__item--cohabitation">Легко уживается с детьми или другими животными</li>
-                    <li class="breed-features__item breed-features__item--instruction">Внешний вид этой кошки похож на дикую рысь</li>
+                    <li class="breed-features__item breed-features__item--cohabitation">Легко уживается в семьях с детьми или другими животными</li>
                     <li class="breed-features__item breed-features__item--weight">Выполняет команды как дрессированная собака</li>
                     <li class="breed-features__item breed-features__item--appearance">Вес может достигать 12 кг, а длина 1 м</li>
+                    <li class="breed-features__item breed-features__item--instruction">Внешний вид этой кошки похож на дикую рысь</li>
                 </ul>
             </div>
         </div>
@@ -97,7 +105,7 @@
                 <ul class="advantages__list">
                     <li class="advantages__item">
                         <a href="#" class="advantages__link">
-                            <span>Бесплатное ветеренарное обслуживание 5 лет</span>
+                            <span>Бесплатное ветеринарное обслуживание 5 лет</span>
                         </a>
                     </li>
                     <li class="advantages__item">
@@ -122,7 +130,7 @@
                     <li class="care__item care__item--wool">
                         <a href="#" class="care__link">
                             <h3 class="care__link-title">Шерсть</h3>
-                            <p class="care__link-content">Мы разработали 8 правил, следуя которым шерсть вашего
+                            <p class="care__link-content">Мы разработали 8 правил, следуя которым, шерсть вашего
                             кота всегда будет блестящей, мягкой и послушной</p>
                         </a>
                     </li>
@@ -130,7 +138,7 @@
                         <a href="#" class="care__link">
                             <h3 class="care__link-title">Уши и глаза</h3>
                             <p class="care__link-content">Владельцам котов необходимо регулярно осматривать
-                                уши и глаза своих питомцев, ведь это может быть
+                                ушки и глаза своих питомцев, ведь это может быть
                                 признаками заболеваний</p>
                         </a>
                     </li>
@@ -144,10 +152,9 @@
                     <li class="care__item care__item--food">
                         <a href="#" class="care__link">
                             <h3 class="care__link-title">Питание</h3>
-                            <p class="care__link-content">В гашем питомнике существуют два подхода: натуральное
-                                питание и питание промышеленными кормами, но выбирать
+                            <p class="care__link-content">В нашем питомнике существует два подхода: натуральное
+                                питание и питание промышленными кормами, но выбирать
                                 только вам</p>
-                                кота всегда будет блестящей, мягкой и послушной</p>
                         </a>
                     </li>
                 </ul>
@@ -158,7 +165,7 @@
         <div class="container">
             <div class="team__wrapper">
                 <h2 class="section__title team__title">Наша команда</h2>
-                <p class="section__lead team__lead">Все сотрудники нашего питомника дипломированные специалисты
+                <p class="section__lead team__lead">Все сотрудники нашего питомника дипломированые специалисты
                         в области фелинологии и ветеринарии</p>
                 <div class="team__slider slider slider__container">
                     <div class="team__list slider__wrapper">
@@ -213,7 +220,7 @@
     <section class="faq section">
         <div class="container">
             <div class="faq__wrapper section__wrapper">
-                <h2 class="section__title faq__title">Ворос-ответ</h2>
+                <h2 class="section__title faq__title">Вопрос-Ответ</h2>
                 <p class="section__lead faq__lead">Мы ответим на самые популярные ваши вопросы</p>
                 <div class="faq-list">
                     <div class="faq__item">
@@ -227,7 +234,8 @@
                                     делают в возрасте 8 недель. Ревакцинация проводится через 3–4
                                     недели. То есть котенок, покидающий дом позднее 12 недель,
                                     максимально защищен от различных вирусов и инфекций.
-
+                                </p>
+                                <p>
                                     Так что, чтобы в дома появился психически и физически здоровый
                                     котенок, игривый, жизнерадостный, самостоятельный и воспитанный, не
                                     спешите забирать его от кошки-мамы раньше трех месяцев.
@@ -276,7 +284,7 @@
                             </div>
                             <div class="reviews__content">
                                 <blockquote>
-                                    <cite class="reviews__item-title">Сережа Попов</cite>
+                                    <cite class="reviews__item-title">Серёжа Попов</cite>
                                     <p>Я выражаю огромную благодарность вашему питомнику.
                                         Мой Феликс невероятно умен и воспитан. Огромным плюсом
                                         питомника является возможность консультироваться
@@ -301,7 +309,7 @@
                         </div>
                     </div>
                     <button type="button" class="slider__button slider__button--prev">
-                        <span class="visually-hidden">Предыжущий отзыв</span>
+                        <span class="visually-hidden">Предыдущий отзыв</span>
                     </button>
                     <button type="button" class="slider__button slider__button--next">
                         <span class="visually-hidden">Следующий отзыв</span>
